# winsight-predictions

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
tests/exhaustive/: test.py
tests/unit/nfl/: smoke_test_data_object.py  test_data_object_storage_modes.py  test_feature_engine.py
tests/unit/nfl/games/: debug_predictions.py  test_features.py  test_merge_feature_groupings.py  test_parallel_training.py  test_predictor.py
tests/unit/nfl/players/: test_data_object_storage_modes.py  test_feature_engine.py
winsight_predictions/: __init__.py
winsight_predictions-0.1.0/: MANIFEST.in  PKG-INFO  pyproject.toml  setup.py
winsight_predictions-0.1.0/winsight_predictions/nfl/: __init__.py  const.py  data_object.py
winsight_predictions-0.1.0/winsight_predictions/nfl/games/: features.py  predictor.py
winsight_predictions-0.1.0/winsight_predictions/nfl/players/: features.py
winsight_predictions/mlb/: __init__.py
winsight_predictions/nba/: __init__.py
winsight_predictions/nfl/: data_object.py  helpers.py  props_and_outcomes.py
winsight_predictions/nfl/games/: __init__.py  features.py  predictor.py  trainer.py
winsight_predictions/nfl/outcomes/: __init__.py  predictor.py  trainer.py
winsight_predictions/nfl/players/: __init__.py  data_object.py  features.py  predictor.py  trainer.py
